--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # PORT=3000
-DB_HOST=database-1.cps2ag6senqg.us-west-1.rds.amazonaws.com
+DB_HOST=publishsubscriber.cps2ag6senqg.us-west-1.rds.amazonaws.com
 DB_USER=admin
 DB_PASSWORD=suyash123
-DB_NAME=database-1
+DB_NAME=publishSubscriber
